# spark

./: pyproject.toml
.github/workflows/: ci.yml
.idx/: dev.nix
spark/: config.py  core.py  packet.py  spark.py  task.py
sparky/: config.py  core.py  packet.py  spark.py  sparky.py  task.py  test.py
sparky/base/: config.py  core.py  exception.py  module.py
