[tool.poetry]
name = "spark"
version = "0.1.0"
description = "Test management framework"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
prompt-toolkit = "^3.0.48"
typer = "^0.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
