[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "tomlkit>=0.13.2",
    "typer-shell==0.1.12",
    "typer==0.12.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 100
